Added work for python api

--- a/.kube/api-deployment.yaml
+++ b/.kube/api-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /code
-              subPath: statyes-app/api
+              subPath: statyes/api
       volumes:
         - name: data
           persistentVolumeClaim:
