--- a/.kube/client-deployment.yaml
+++ b/.kube/client-deployment.yaml
@@ -23,7 +23,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /usr/src/app
-              subPath: statyes-app/client
+              subPath: statyes/client
       volumes:
         - name: data
           persistentVolumeClaim:
